# rust_discord_help_bot

./: .gitignore  Cargo.toml  LICENSE
resources/: insult-adjectives.txt  insult-nouns.txt
src/: main.rs
