[package]
name = "discord_help_bot_v2"
version = "0.1.0"
authors = ["adam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { default-features = false, features = ["client", "gateway", "rustls_backend", "model"], version = "0.10" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.3"
regex = "1.5.4"
csv = "1.1"
lazy_static = "1.4"
